fix visible bullet points in menu on mobile

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -6,7 +6,6 @@
         display: flex;
     }
     nav li{
-        list-style: none;
         flex: 1;
     }
     #responsive-button{
